--- a/package.json
+++ b/package.json
@@ -6,18 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "rm-dev": "remotion rm"
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@remotion/cli": "^3.3.31",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
+    "lodash": "^4.17.21",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remotion": "^3.3.31",
+    "sass": "^1.57.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "autoprefixer": "^10.4.13",
+    "node-sass": "^8.0.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
